Review: APPROVE - AI-Augmented Threat Actor Breached 600 FortiGate Firewalls

--- a/sources/2026-02/ai-augmented-threat-actor-breached-600-fortigate-firewalls-in-five-weeks-using-commercial-llms-amazon-warns/source-2.html
+++ b/sources/2026-02/ai-augmented-threat-actor-breached-600-fortigate-firewalls-in-five-weeks-using-commercial-llms-amazon-warns/source-2.html
@@ -1077,6 +1077,39 @@
                     <ul style="padding-top:5px;">
                      
                         <li>
+                                <a class="spon_res" href="https://try.flare.io/bleeping-computer/?utm_campaign=38780470-Smartmail%20Bleeping%20Computer%20February%2018&utm_source=Paid%20Media&utm_medium=Bleeping%20Computer&utm_term=Over%201%2C000%20SmarterMail%20Servers%20Remain%20Vulnerable%20to%20Active%2" target="_blank" rel="nofollow noopener">
+                                <div class="bc_guide_img">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/posts/2026/02/18/thumb/100x82_flare-header-image-hg.jpg" alt="Are attackers sharing exploits for your tech stack? Monitor threats for free.">
+                                </div>
+                                <div class="bc_guide_text">
+                                  <p>Are attackers sharing exploits for your tech stack? Monitor threats for free.</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a class="spon_res" href="https://www.intruder.io/use-cases/secrets-detection?utm_source=bleepingcomputer&utm_medium=p_referral&utm_campaign=global|fixed|secrets_detection" target="_blank" rel="nofollow noopener">
+                                <div class="bc_guide_img">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/posts/2026/02/12/thumb/100x82_intruder-search.jpg" alt="Are secrets hiding in your JS bundles? Intruder finds them before hackers do. Book a demo.">
+                                </div>
+                                <div class="bc_guide_text">
+                                  <p>Are secrets hiding in your JS bundles? Intruder finds them before hackers do. Book a demo.</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li>
+                                <a class="spon_res" href="https://go.passwork.pro/4bRyHU9" target="_blank" rel="nofollow noopener">
+                                <div class="bc_guide_img">
+                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/hl-images/2021/09/08/thumb/100x82_PasswordManagement.jpg" alt="Password Management">
+                                </div>
+                                <div class="bc_guide_text">
+                                  <p>Zero-risk move to Passwork enterprise password management: Free migration + 20% off</p>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li>
                                 <a class="spon_res" href="https://specopssoft.com/product/specops-password-auditor/?utm_source=bleepingcomputer&utm_medium=referral&utm_campaign=bleepingcomputer_referral_na&utm_content=article" target="_blank" rel="nofollow noopener">
                                 <div class="bc_guide_img">
                                         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/posts/2026/02/12/thumb/100x82_how-infostealers-turn-stolen-credentials-into-real-identities.png" alt="Overdue a password health-check? Audit your Active Directory for free">
@@ -1098,39 +1131,6 @@
                             </a>
                         </li>
 
-                        <li>
-                                <a class="spon_res" href="https://go.passwork.pro/4bRyHU9" target="_blank" rel="nofollow noopener">
-                                <div class="bc_guide_img">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/hl-images/2021/09/08/thumb/100x82_PasswordManagement.jpg" alt="Password Management">
-                                </div>
-                                <div class="bc_guide_text">
-                                  <p>Zero-risk move to Passwork enterprise password management: Free migration + 20% off</p>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a class="spon_res" href="https://www.intruder.io/use-cases/secrets-detection?utm_source=bleepingcomputer&utm_medium=p_referral&utm_campaign=global|fixed|secrets_detection" target="_blank" rel="nofollow noopener">
-                                <div class="bc_guide_img">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/posts/2026/02/12/thumb/100x82_intruder-search.jpg" alt="Are secrets hiding in your JS bundles? Intruder finds them before hackers do. Book a demo.">
-                                </div>
-                                <div class="bc_guide_text">
-                                  <p>Are secrets hiding in your JS bundles? Intruder finds them before hackers do. Book a demo.</p>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li>
-                                <a class="spon_res" href="https://try.flare.io/bleeping-computer/?utm_campaign=38780470-Smartmail%20Bleeping%20Computer%20February%2018&utm_source=Paid%20Media&utm_medium=Bleeping%20Computer&utm_term=Over%201%2C000%20SmarterMail%20Servers%20Remain%20Vulnerable%20to%20Active%2" target="_blank" rel="nofollow noopener">
-                                <div class="bc_guide_img">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="b-lazy" data-src="https://www.bleepstatic.com/content/posts/2026/02/18/thumb/100x82_flare-header-image-hg.jpg" alt="Are attackers sharing exploits for your tech stack? Monitor threats for free.">
-                                </div>
-                                <div class="bc_guide_text">
-                                  <p>Are attackers sharing exploits for your tech stack? Monitor threats for free.</p>
-                                </div>
-                            </a>
-                        </li>
-
                     </ul>
                 </div>
 
@@ -1142,7 +1142,7 @@
 	
         
 	
-        <div class="s-ou-wrap" id="WeTsmPF2">
+        <div class="s-ou-wrap" id="DKde8iR4">
  
 <div align="center" data-freestar-ad="__300x250 __300x600" id="bleepingcomputer_300x250_300x600_160x600_Right_3">
 <script data-cfasync="false" type="text/javascript">
@@ -1355,7 +1355,7 @@ myTimer = setInterval( function() {
         }
 }, 500);
 
-        $('#WeTsmPF2').fixTo('.bc_right_sidebar', {
+        $('#DKde8iR4').fixTo('.bc_right_sidebar', {
 		 top: 25,
                  bottom: 25,
         });
