Review: APPROVE - Open Source Projects Splinter into Opposing Camps as AI-Generated Contributions Force a Governance Reckoning

--- a/sources/2026-02/open-source-projects-splinter-into-opposing-camps-as-ai-generated-contributions-force-a-governance-reckoning/source-5.html
+++ b/sources/2026-02/open-source-projects-splinter-into-opposing-camps-as-ai-generated-contributions-force-a-governance-reckoning/source-5.html
@@ -198,7 +198,7 @@ Following recent discussions over AI contributions to the LLVM open-source compi
 							</div>
 <div class="article-box">
 								<header>Popular News This Week</header>
-								<div class="node"><a href="/news/AI-50-80x-IO-uring">AI Helped Uncover A &quot;50-80x Improvement&quot; For Linux&#039;s IO_uring</a></div><div class="node"><a href="/news/Linux-7.0-rc1-Released">Linux 7.0-rc1 Released With Many New Features:</a></div><div class="node"><a href="/news/Ubuntu-26.04-Feature-Freeze">Ubuntu 26.04 Begins Its Feature Freeze</a></div><div class="node"><a href="/news/ollama-0.17">ollama 0.17 Released With Improved OpenClaw Onboarding</a></div><div class="node"><a href="/news/Intel-Linux-Jobs-February-2026">Intel Hiring More Linux Developers - Including For GPU Drivers / Linux Gaming Stack</a></div><div class="node"><a href="/news/Plasma-6.6-Released-This-Week">KDE Plasma 6.7 Preps More Improvements While Plasma 6.6.1 Fixes Begin Accumulating</a></div><div class="node"><a href="/news/Hawaii-Macs-AMDGPU-DC-Fix">Yet Another Fix Coming For Older AMD GPUs On Linux - Thanks To Valve Developer</a></div><div class="node"><a href="/news/Vulkan-1.4.344-Released">Vulkan 1.4.344 Released With New Extension From Valve</a></div>
+								<div class="node"><a href="/news/AI-50-80x-IO-uring">AI Helped Uncover A &quot;50-80x Improvement&quot; For Linux&#039;s IO_uring</a></div><div class="node"><a href="/news/Linux-7.0-rc1-Released">Linux 7.0-rc1 Released With Many New Features:</a></div><div class="node"><a href="/news/Ubuntu-26.04-Feature-Freeze">Ubuntu 26.04 Begins Its Feature Freeze</a></div><div class="node"><a href="/news/ollama-0.17">ollama 0.17 Released With Improved OpenClaw Onboarding</a></div><div class="node"><a href="/news/Intel-Linux-Jobs-February-2026">Intel Hiring More Linux Developers - Including For GPU Drivers / Linux Gaming Stack</a></div><div class="node"><a href="/news/Plasma-6.6-Released-This-Week">KDE Plasma 6.7 Preps More Improvements While Plasma 6.6.1 Fixes Begin Accumulating</a></div><div class="node"><a href="/news/Hawaii-Macs-AMDGPU-DC-Fix">Yet Another Fix Coming For Older AMD GPUs On Linux - Thanks To Valve Developer</a></div><div class="node"><a href="/news/sudo-rs-password-feedback">sudo-rs Breaks Historical Norms With Now Enabling Password Feedback By Default</a></div>
 							</div>		</div>
 <!-- google_ad_section_end -->
 					</div>
@@ -216,6 +216,12 @@ Following recent discussions over AI contributions to the LLVM open-source compi
                         </aside>
                         <aside class="widget">
 			<header>Latest Linux News</header><div class="popular-list">
+                                <a href="/news/GNOME-GitHub-GitLab-Redirect">GNOME GitLab Redirecting Some Git Traffic To GitHub For Reducing Costs</a>
+                            </div>
+<div class="popular-list">
+                                <a href="/news/Hyprland-0.54-Released">Hyprland 0.54 Released As A &quot;Massive&quot; Update To This Wayland Compositor</a>
+                            </div>
+<div class="popular-list">
                                 <a href="/news/Intel-Media-Driver-2025Q4">Intel Media Driver Update Brings Nova Lake S Support, AV1 Improvements</a>
                             </div>
 <div class="popular-list">
@@ -238,12 +244,6 @@ Following recent discussions over AI contributions to the LLVM open-source compi
                             </div>
 <div class="popular-list">
                                 <a href="/news/sudo-rs-password-feedback">sudo-rs Breaks Historical Norms With Now Enabling Password Feedback By Default</a>
-                            </div>
-<div class="popular-list">
-                                <a href="/news/Linux-7.1-Looks-xattrs-Sockets">Linux 7.1 Looks To Support Extended Attributes On Sockets For New GNOME &amp; systemd Functionality</a>
-                            </div>
-<div class="popular-list">
-                                <a href="/news/Fwupd-2.0.20">Fwupd 2.0.20 Brings New Hardware Support</a>
                             </div>
                         </aside>
 			<aside>
